# hr_bot

./: .coveragerc  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  README_ru.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: config.py  log_config.py  main.py
app/bot/: handlers.py  keyboards.py
app/services/: ai.py  parser.py
tests/: conftest.py  test_handlers.py  test_parser.py
