[tool.poetry]
name = "hr-bot"
version = "0.1.0"
description = ""
authors = ["edfarrow <edvardfrrw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.12.0"
google-generativeai = "^0.8.5"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.38.0"
black = "^25.12.0"
flake8 = "^7.3.0"
coverage = "^7.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
