[tool.poetry]
name = "hr-bot"
version = "0.1.0"
description = ""
authors = ["edfarrow <edvardfrrw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pydantic-settings = "^2.12.0"
google-generativeai = "^0.8.5"
bs4 = "^0.0.2"
aiogram = "^3.23.0"
fastapi = "^0.124.3"
redis = "^7.1.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.38.0"
black = "^25.12.0"
flake8 = "^7.3.0"
coverage = "^7.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
